<resources>
    <string name="app_name">FoodZone</string>
    <string name="yuvraj">yuvraj</string>
    <string name="todo">TODO</string>
    <string name="English">English</string>
    <string name="Hindi">Hindi</string>
    <string name="Light">Light</string>
    <string name="Dark">Dark</string>
    <string name="bgimg">backgroundImg</string>
    <string name="github">GitHub</string>
    <string name="Bio">Hy , Yuvraj this side !!! I am learning android development. The language I am using is Kotlin + Xml. ya it\'s fun but sometimes the laptop sucks , but still I\'m in the GO !!</string>
    <string name="Bio2">Hy , Yuvraj this side !!! I am learning android development. The language I am using is Kotlin + Xml. ya it\'s fun but sometimes the laptop sucks , but still I\'m in the GO !!Hy , Yuvraj this side !!! I am learning android development. The language I am using is Kotlin + Xml. ya it\'s fun but sometimes the laptop sucks , but still I\'m in the GO !!Hy , Yuvraj this side !!! I am learning android development. The language I am using is Kotlin + Xml. ya it\'s fun but sometimes the laptop sucks , but still I\'m in the GO !!Hy , Yuvraj this side !!! I am learning android development. The language I am using is Kotlin + Xml. ya it\'s fun but sometimes the laptop sucks , but still I\'m in the GO !!</string>
    <string name="scroll_view">Scroll View</string>
    <string name="next_page">Next Page</string>
    <string name="i_am_screen_2">I am Screen 2</string>
    <string name="welcome">Hello To My Application</string>
    <string name="AboutGitHub">GitHub is a web-based platform for version control using git. it allows developers to collaborate on projects, track changes , and manage code repositories. Github facilitates teamwork , code review , and project management within a shared environment.</string>
    <string name="home">Home</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="google">Google</string>
    <string name="youtube">YouTube</string>
    <string name="camera">Camera</string>
    <string name="webview">WebView</string>
    <string name="menu">Menu</string>
    <string name="cafe">Welcome To THE CAFE</string>
    <string name="order_1">order 1</string>
    <string name="order_2">order 2</string>
    <string name="order_3">order 3</string>
    <string name="order_4">order 4</string>
    <string name="order_5">order 5</string>
    <string name="order">Order</string>
    <string name="your_orders">Your Orders</string>
    <string name="toothless">TOOTHLESS</string>
    <string name="splashscreen">splashscreen</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_the_name">enter the name</string>
    <string name="username">Username</string>
    <string name="email">email</string>
    <string name="password">Password</string>
</resources>