<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/welcome"
       android:layout_gravity="center"
       android:textStyle="bold"
       android:textColor="@color/black"
       android:gravity="center"
       android:textSize="30sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/Bio"/>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="10dp">

    <Button
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scroll_view"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="30dp"
        android:textStyle="bold"
        android:layout_marginTop="0dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/implicitIntent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/implicit_intent"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="30dp"
        android:textStyle="bold"
        android:layout_marginTop="0dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        style="?android:attr/buttonBarButtonStyle" />
  </LinearLayout>

 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_marginTop="10dp">

 <Button
        android:id="@+id/WebView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/webview"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="30dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/black"
     style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="30dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/black"
        style="?android:attr/buttonBarButtonStyle" />
 </LinearLayout>
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_marginTop="10dp">

 <Button
     android:id="@+id/splashscreen"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/splashscreen"
     android:layout_gravity="center"
     android:textSize="20sp"
     android:layout_marginStart="20dp"
     android:paddingVertical="20dp"
     android:paddingHorizontal="30dp"
     android:textStyle="bold"
     android:textColor="@color/white"
     android:backgroundTint="@color/black"
     style="?android:attr/buttonBarButtonStyle" />

  <Button
      android:id="@+id/signup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/sign_up"
      android:layout_gravity="center"
      android:textSize="20sp"
      android:layout_marginStart="20dp"
      android:paddingVertical="20dp"
      android:paddingHorizontal="30dp"
      android:textStyle="bold"
      android:textColor="@color/white"
      android:backgroundTint="@color/black"
      style="?android:attr/buttonBarButtonStyle" />
 </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>