<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".SecondActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scroll_view"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/gitlogo"
        android:contentDescription="@string/github" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/github"
        android:gravity="center"
        android:layout_marginVertical="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="150dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/AboutGitHub"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="italic" />
    </ScrollView>

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textSize="30sp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"/>
</LinearLayout>