<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ImplicitIntent">

    <androidx.cardview.widget.CardView
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/google"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/camera"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/github"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/github"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"/>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/home"
        app:cardCornerRadius="20dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/home"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"/>

    </androidx.cardview.widget.CardView>


</LinearLayout>