<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcolor"
    android:orientation="vertical"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="20dp">
<!--1st-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="10dp"
        app:startIconDrawable="@drawable/person">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColorHint="@color/black"
            android:layout_height="wrap_content"
            android:background="@drawable/graybackground"
            android:hint="@string/username"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
<!--2nd-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:startIconDrawable="@drawable/email"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColorHint="@color/black"
            android:layout_height="wrap_content"
            android:background="@drawable/graybackground"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

<!--3rd-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:startIconDrawable="@drawable/password"
        app:endIconMode="password_toggle"
        app:endIconTintMode="screen">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColorHint="@color/black"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/graybackground"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:backgroundTint="@color/black"
        android:paddingVertical="10dp"
        android:paddingHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
</LinearLayout>
